devops/istio/config-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pricingserviceroute
spec:
  hosts:
  - "*"
  gateways:
  - config-gateway
  http:
  - match:
    - uri:
        prefix: /pricing
    route:
    - destination:
        host: coc-pricing-service
        port:
          number: 12789
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coc-pricing-service
spec:
  hosts:
  - coc-pricing-service
  http:
  - route:
    - destination:
        host: coc-pricing-service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: coc-pricing-service
spec:
  host: coc-pricing-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 7
      interval: 5m
      baseEjectionTime: 15m
      maxEjectionPercent: 100
